--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,5 +1,303 @@
 /* apply a natural box layout model to all elements, but allowing components to change */
 
+.nav-bar {
+	background: #C8DEFF;
+	border-bottom: 3px solid #666;
+	margin-bottom: 20px;
+	width: 100%;
+}
+ 
+.navigation {
+	font-size: 0;
+	text-align: center;
+}
+ 
+.navigation a {
+	color: #fff;
+}
+ 
+.navigation li:hover > a {
+	text-decoration: none;
+}
+ 
+
+/* Top Level */
+.navigation > ul {
+  margin: 0;
+  padding: 0;
+}
+
+.navigation > ul > li {
+	background: url(http://i.imgur.com/ijNENpN.png) no-repeat left 50%;
+	font-size: 14px;
+	position: relative;  	
+	float: right;
+}
+
+.navigation > ul > li:first-child {
+	background: none;
+	float: left;
+}
+
+
+.navigation > ul > li > a {
+	display: block;
+	padding: 20px 24px;
+}
+ 
+.navigation > ul > li:hover > a{
+  background: #666;
+}
+
+.navigation li:hover + li {
+ 	background-image: none;
+}
+
+.navigation li:fa-caret-down  {
+	float:right;
+}
+ 
+/* Drop Down Level */
+.navigation li:hover .drop-down {
+  filter: alpha(opacity=100); /*Older IE Fix*/
+  opacity: 1;
+	z-index: 1;
+}
+ 
+.drop-down {
+	background: #5226F9;
+	filter: alpha(opacity=0); /*Older IE Fix*/
+	opacity: 0;
+	padding: 0;
+	position: absolute;
+	text-align: left;
+	transition: opacity linear 0.2s;
+	width: 280px;
+	z-index: -1;
+	color: white;
+}
+ 
+.drop-down li {
+	display: block;
+}
+ 
+.drop-down li a {
+	display: block;  	
+  padding: 10px 24px;
+}
+ 
+.drop-down li a:hover {
+  background: #353535;
+}
+
+.navigation .fa.fa-caret-down	{
+	margin-left: 6px;	
+}
+
+
+.cf:before,
+.cf:after {
+  content: " "; /* 1 */
+  display: table; /* 2 */
+}
+
+.cf:after {
+  clear: both;
+}
+
+/** For IE 6/7 only - Include this rule to trigger hasLayout and contain floats. */
+.cf {
+  *zoom: 1;
+}
+
+.page {
+	background: lightgrey;
+	height: 25px;
+}
+
+html {
+  background: #eeeeee;
+
+}
+
+
+#content-scroller{
+  overflow: visible;
+}
+
+md-toolbar button.md-button.md-icon-button:first-child {
+  margin-left: 0px;
+  margin-right: 16px;
+}
+
+md-toolbar button.md-button.md-icon-button:first-child md-icon {
+  color: white;
+}
+
+md-content {
+  background: #eeeeee;
+  position: relative;
+}
+
+.fit {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+#summary {
+  margin: 32px 72px;
+}
+
+
+.inputdemoErrors .inputErrorsApp {
+  /* min-height: 48px; } */}
+.inputdemoErrors md-input-container > p {
+  font-size: 0.8em;
+  text-align: left;
+  width: 100%; }
+  
+html {
+  background: #eeeeee;
+
+}
+
+body {
+  background: #7B7B7B;
+
+}
+
+#content-scroller{
+  overflow: visible;
+}
+
+md-toolbar button.md-button.md-icon-button:first-child {
+  margin-left: 0px;
+  margin-right: 16px;
+}
+
+md-toolbar button.md-button.md-icon-button:first-child md-icon {
+  color: white;
+}
+
+md-content {
+  background: #eeeeee;
+  position: relative;
+}
+
+.fit {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+#summary {
+  margin: 32px 72px;
+}
+
+.card {
+  background: white;
+  min-width: 100px;
+  min-height: 100px;
+  max-width: 400px;
+  margin: 8px;
+  -webkit-transition: .4s;
+  transition: .4s;
+  opacity: 0;
+  -webkit-transform: scale(0.75) translate3d(0, 200px, 0);
+  transform: translate3d(0, 200px, 0);
+  border-radius: 2px;
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
+  overflow: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.card.angular-grid-item {
+  opacity: 1;
+  -webkit-transform: scale(1) translate3d(0, 0, 0);
+  transform: scale(1) translate3d(0, 0, 0);
+}
+
+.card .img {
+  width: 100%;
+  height: 0;
+  padding-top: 75%;
+  background-size: cover;
+  background-color: #ccc;
+}
+
+.card .inside {
+  padding: 16px;
+  word-wrap: break-word;
+}
+
+.card .inside h3 {
+  margin-top: 0;
+  margin-bottom: 8px;
+}
+
+.card .inside a {
+  color: #E91E63;
+  text-decoration: none;
+}
+
+.card .inside a:hover {
+  text-decoration: underline;
+}
+
+.card .inside .description {
+  font-size: 14px;
+  line-height: 1.3;
+  color: #555;
+}
+
+.cards-wrap {
+  margin: 32px 64px;
+  padding-bottom: 64px;
+  position: relative;
+}
+
+.loading-more-indicator {
+  text-align: center;
+}
+
+.loading-more-indicator md-progress-circular {
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  display: inline-block;
+}
+
+.grid {
+  border: 1px solid #cccccc;
+  list-style: none;
+  background: #ffffff;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-transition: all 0.6s ease-out;
+  transition: all 0.6s ease-out;
+}
+
+.grid-img {
+  width: 100%;
+  vertical-align: middle;
+  -webkit-transition: opacity 0.6s ease-out;
+  transition: opacity 0.6s ease-out;
+  background-color: #fff;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.grid-img.img-loaded {
+  visibility: visible;
+  opacity: 1;
+}
+
+
 *,  *:before, *:after {
   margin: 0; padding: 0;
   box-sizing: border-box;
@@ -9,7 +307,7 @@
 html, body {
   height: 100%;
   width: 100%;
-  background: #eee;
+  background: #7B7B7B;
 }
 
 a,
@@ -41,7 +339,7 @@ header:after {
   background: transparent;
   color: transparent;
   width: 80px;
-  margin: -30px auto;
+  margin: -25px auto;
 }
 
 .flickr-image:hover {
@@ -54,7 +352,7 @@ header:after {
 }
 
 header {
-  height: 200px;
+  /* height:100px; */
   color: #3a3a3a;
   line-height: 200px;
   text-align: center;
@@ -62,9 +360,9 @@ header {
 }
 
 header h1 {
-  font-family: 'Open Sans', sans-serif;
+  /* font-family: 'Open Sans', sans-serif; */
   font-weight: 300;
-  font-size: 7vw;
+  font-size: 8vw;
   text-transform: uppercase;
 }
 
@@ -161,7 +459,8 @@ body  {
   line-height: 160%;
   color: #555459;
   line-height: 1.5rem;
-    *zoom: 1;
+  /* zoom: 1; */
+	background-color:#7B7B7B;
 }
 
 .card {
@@ -194,10 +493,6 @@ h1, h2, h3, h4, h5, h6 {
 a {
   color: #2D8BCF;
   font-family: Lato, 'Helvetica Nueue', Helvetica, Arial, sans-serif;
-}
-
-header {
-  margin-bottom: 20px;
 }
 
 h1{
@@ -520,20 +815,20 @@ nav {
   padding-top: 0px;*/
 
   width: 100%;
-  background: beige;
+  background: #D2F4FF;
   box-shadow: 0 1px 1px rgba(0,0,0,.1);
 }
 
 .branding {
   float: left;
   margin: 20px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .branding a {
   width: 80%;
   font-size: 1.6em;
-  text-align: left;
-  color: #1B7998;
+  color: black;
   text-decoration: none;
   text-align: left;
 }
@@ -581,7 +876,6 @@ nav li a:hover {
 .userinfo {
   text-align: center;
   font-family: Lato, 'Helvetica Nueue', Helvetica, Arial, sans-serif;
-  padding-bottom: 5px;
 }
 
 .userinfo a {
