--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -7,6 +7,7 @@
 		<ul class="drop-down">
 			<li><a ng-hide="currentUser" ng-href="#/login">Login</a></li>
 			<li><a ng-hide="currentUser" ng-href="#/register">Register</a></li>
+			<li><a ng-hide="currentUser" ng-href="#/settings">Settings</a></li>
 			<li><a ng-show="currentUser" ng-href="#/login" ng-click="logout()">Logout</a></li>
 		</ul>
 	  </li>
